// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthCode renders 1`] = `
<div
  className="sc-fEVxLL iLfGGv"
  dir="ltr"
>
  <div />
</div>
`;

exports[`AuthCode renders Custom length 1`] = `
<div
  className="sc-fEVxLL iLfGGv"
  dir="ltr"
>
  <div>
    <div
      className="sc-jdzWJC hBoQHx"
    >
      <div
        className="sc-iOnGvX dtoFCR"
        dir="ltr"
        disabled={false}
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      >
        <input
          className="sc-goMRkL JOvHL"
          dir="ltr"
          disabled={false}
          id="auth-code-part-0"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-jdzWJC hBoQHx"
    >
      <div
        className="sc-iOnGvX btMRNz"
        dir="ltr"
        disabled={true}
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      >
        <input
          className="sc-goMRkL JOvHL"
          dir="ltr"
          disabled={true}
          id="auth-code-part-1"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-jdzWJC hBoQHx"
    >
      <div
        className="sc-iOnGvX btMRNz"
        dir="ltr"
        disabled={true}
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      >
        <input
          className="sc-goMRkL JOvHL"
          dir="ltr"
          disabled={true}
          id="auth-code-part-2"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-jdzWJC hBoQHx"
    >
      <div
        className="sc-iOnGvX btMRNz"
        dir="ltr"
        disabled={true}
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      >
        <input
          className="sc-goMRkL JOvHL"
          dir="ltr"
          disabled={true}
          id="auth-code-part-3"
          inputMode="text"
          maxLength={4}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthCode renders Error state 1`] = `
<div
  className="sc-fEVxLL gTsxvH"
  dir="ltr"
>
  <div>
    <div
      className="sc-jdzWJC hBoQHx"
    >
      <div
        className="sc-iOnGvX dtoFCR"
        dir="ltr"
        disabled={false}
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      >
        <input
          className="sc-goMRkL kDWyPF"
          dir="ltr"
          disabled={false}
          id="auth-code-part-0"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-jdzWJC hBoQHx"
    >
      <div
        className="sc-iOnGvX btMRNz"
        dir="ltr"
        disabled={true}
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      >
        <input
          className="sc-goMRkL kDWyPF"
          dir="ltr"
          disabled={true}
          id="auth-code-part-1"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-jdzWJC hBoQHx"
    >
      <div
        className="sc-iOnGvX btMRNz"
        dir="ltr"
        disabled={true}
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      >
        <input
          className="sc-goMRkL kDWyPF"
          dir="ltr"
          disabled={true}
          id="auth-code-part-2"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-jdzWJC hBoQHx"
    >
      <div
        className="sc-iOnGvX btMRNz"
        dir="ltr"
        disabled={true}
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      >
        <input
          className="sc-goMRkL kDWyPF"
          dir="ltr"
          disabled={true}
          id="auth-code-part-3"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-jdzWJC hBoQHx"
    >
      <div
        className="sc-iOnGvX btMRNz"
        dir="ltr"
        disabled={true}
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      >
        <input
          className="sc-goMRkL kDWyPF"
          dir="ltr"
          disabled={true}
          id="auth-code-part-4"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-jdzWJC hBoQHx"
    >
      <div
        className="sc-iOnGvX btMRNz"
        dir="ltr"
        disabled={true}
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      >
        <input
          className="sc-goMRkL kDWyPF"
          dir="ltr"
          disabled={true}
          id="auth-code-part-5"
          inputMode="text"
          maxLength={6}
          onChange={[Function]}
          pattern="[a-z0-9]*"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="sc-fCdBJp fFJVf"
    >
      <p
        className="sc-cQIpJi jgOjbU"
        color="chiChi.100"
        size={12}
      >
        Provided value is not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`AuthCode renders Only digits 1`] = `
<div
  className="sc-fEVxLL iLfGGv"
  dir="ltr"
>
  <div />
</div>
`;
